feat! : add tenant support for character (#32)
- Adds tenant support for character
- Adds a type wrapper(CharacterKey) for character ID creation to improve
safety

--- a/env.example
+++ b/env.example
@@ -21,3 +21,5 @@ KEY_SCHEME=ed25519
 # ============================================
 # Required for running TypeScript examples
 PRIVATE_KEY=
+
+TENANT=
