feat! : replace AdminCap with AdminACL for caps owned by different address (#42)
**Problem**
- In Sui, we can only access the owned objects of one address per-PTB
per transaction, other objects should be shared. Operations like
game_item_to_chain_inventory require both AdminCap (admin-owned) and
OwnerCap (player-owned), which cannot be used together.

**Solution** 
- Introduce AdminACL as a shared object that whitelist authorized
sponsor addresses. Functions check sponsorship via ctx.sender() instead
of requiring an owned AdminCap.

**Benefits**
- Enables multi-address operations (player OwnerCap + admin-sponsored
transactions)
- Flexible authorization (easy sponsor management)
- AdminCap still controls ACL membership via Governor
- New functions can adopt the ACL pattern where we need AdminCap +
OwnerCap

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "fmt:ts:check": "prettier --check \"examples/**/*.ts\"",
     "sig-verify": "tsx examples/crypto/sig-verify.ts",
     "generate-test-sig": "tsx examples/location/generate-test-signature.ts",
-    "create-character": "tsx examples/character/create-character.ts"
+    "create-character": "tsx examples/character/create-character.ts",
+    "create-storage-unit": "tsx examples/storage-unit/create-storage-unit.ts",
+    "online": "tsx examples/storage-unit/online.ts",
+    "game-item-to-chain": "tsx examples/storage-unit/game-item-to-chain.ts"
   },
   "dependencies": {
     "@mysten/prettier-plugin-move": "^0.3.3",
