feat: network node implementation (#49)
Implements network nodes that produce energy from fuel for connected
assemblies.
- Fuel management: deposit/withdraw fuel, start/stop burning
- Energy production: produces energy when online (fuel burning)
- Assembly connection management: connect/disconnect assemblies to
network nodes
- Hot potato pattern: enforces all connected assemblies are brought
offline when network node goes offline

PTB Pattern 
When a network node goes runs out of fuel during update, it returns an
OfflineAssemblies hot potato that must be consumed in the same
transaction:
- Call network_node::offline() or network_node::update_fuel() → returns
OfflineAssemblies hot potato
- For each connected assembly, call
assembly::offline_connected_assembly():
    - Passes the hot potato, removes assembly ID from list
   - Brings assembly offline if online, releases energy
   - Returns updated hot potato
- Call network_node::destroy_offline_assemblies() → validates list is
empty and consumes hot potato

```
// Network node goes offline
let offline_assemblies = nwn.offline(fuel_config, owner_cap, clock);

// Process each assembly
let offline_assemblies = assembly::offline_connected_assembly(
    offline_assemblies, assembly1, nwn, energy_config, admin_cap
);
let offline_assemblies = assembly::offline_connected_assembly(
    offline_assemblies, assembly2, nwn, energy_config, admin_cap
);

// Destroy hot potato (fails if assemblies remain)
network_node::destroy_offline_assemblies(offline_assemblies);
```

Cron job dependency:
- Assumes frequent update_fuel() calls. Current implementation does not
take into account the cron job failure, so there is a possibility the
the fuel is depleted but still online because update is not triggered.
- Cron job failure handling will be added

---------

Co-authored-by: CCP Bofai <110458897+ccp-bofai@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ node_modules/
 
 # IDE / Editor files
 .vscode/
+.**/**
 
 # Deployment debug files
 deployments/**
@@ -20,3 +21,6 @@ deployments/**
 # docs
 docs/features/
 prd.md
+
+# contracts
+contracts/world/sources/primitives/template.move
