refactor: simplify update_fuel to return OfflineAssemblies directly  (#53)
- Change update_fuel return type from Option<OfflineAssemblies> to
OfflineAssemblies
- Returns empty list in hot potato when fuel is still burning, populated
when depleted
- Update offline_connected_assembly to handle empty hot potatoes
gracefully
- added client code examples to process hot potato

--- a/env.example
+++ b/env.example
@@ -23,3 +23,13 @@ KEY_SCHEME=ed25519
 PRIVATE_KEY=
 
 TENANT=
+
+# Fuel efficiency configuration arrays (comma-separated)
+# Format: FUEL_TYPE_IDS=1,2,3 and FUEL_EFFICIENCIES=100,90,75
+FUEL_TYPE_IDS=
+FUEL_EFFICIENCIES=
+
+# Energy configuration arrays (comma-separated)
+# Format: ASSEMBLY_TYPE_IDS=8888,5555,6666 and ENERGY_REQUIRED_VALUES=50,30,20
+ASSEMBLY_TYPE_IDS=
+ENERGY_REQUIRED_VALUES=
