refactor: typescript example to support the contract changes (#64)
refactor ts examples to align with contract changes
use shared helpers to reduce code duplication

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "create-character": "tsx examples/character/create-character.ts",
     "create-nwn": "tsx examples/network-node/create-nwn.ts",
     "deposit-fuel": "tsx examples/network-node/deposit-fuel.ts",
-    "start-burning": "tsx examples/network-node/start-burning.ts",
-    "update": "tsx examples/network-node/update-fuel.ts",
+    "online-nwn": "tsx examples/network-node/online-nwn.ts",
+    "update-fuel": "tsx examples/network-node/update-fuel.ts",
     "offline-nwn": "tsx examples/network-node/offline-nwn.ts",
     "get-fuel-quantity": "tsx examples/network-node/helper.ts",
     "create-assembly": "tsx examples/assembly/create-assembly.ts",
