feat: update invalid energy source in assemblies (#71)
**1. Optional energy source, clear on unanchor**

- `energy_source_id` is now `Option<ID>` on Assembly and StorageUnit.
- When handling the OfflineAssemblies hot potato from `nwn.unanchor()`,
pass `remove_energy_source: true` so each child assembly is offlined and
its energy source is cleared; for `nwn.offline()` pass `false` so they
keep it.

**2. UpdateEnergySources hot potato for connect_assemblies**
- `connect_assemblies` returns an **UpdateEnergySources** hot potato to
update the connected assembly energy source

- Updated the ts examples

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "online-nwn": "tsx examples/network-node/online-nwn.ts",
     "update-fuel": "tsx examples/network-node/update-fuel.ts",
     "offline-nwn": "tsx examples/network-node/offline-nwn.ts",
+    "unanchor-nwn": "tsx examples/network-node/unanchor-nwn.ts",
     "get-fuel-quantity": "tsx examples/network-node/helper.ts",
     "create-assembly": "tsx examples/assembly/create-assembly.ts",
     "online": "tsx examples/assembly/online.ts",
