!refactor(ownership): Transfer OwnerCap ownership to Character (keychain pattern) (#73)
**Motivation**
Manage multiple OwnerCaps via a single on-chain “character” object,
instead of tracking many address-owned caps.

**Summary**
- Change OwnerCap ownership from address-owned to object-owned by
Character.
- All OwnerCaps are now held by the Character object, simulating a
real-world keychain: if you have access to the keychain, you can access
everything inside it.

**Changes**
- On any in-game item creation, the OwnerCap is transferred to the
Character object (object ownership).
- To use any OwnerCap-gated function, callers must:
- Borrow the OwnerCap from Character via Receiving<OwnerCap<T>>
(authorized by character_address), and
    - Return the OwnerCap back to the Character after use.
 - Modified tests and ts examples to match the new ownership model
    
**Reference**
https://move-book.com/storage/transfer-to-object/

https://docs.sui.io/guides/developer/objects/transfers/transfer-to-object

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fmt:ts:check": "prettier --check \"examples/**/*.ts\" \"tools/**/*.ts\"",
     "sig-verify": "tsx examples/crypto/sig-verify.ts",
     "generate-test-sig": "tsx examples/location/generate-test-signature.ts",
+    "setup-access": "tsx examples/access/setup-access.ts",
     "configure-fuel-energy": "tsx examples/network-node/configure-fuel-energy.ts",
     "create-character": "tsx examples/character/create-character.ts",
     "create-nwn": "tsx examples/network-node/create-nwn.ts",
@@ -27,6 +28,8 @@
     "create-storage-unit": "tsx examples/storage-unit/create-storage-unit.ts",
     "ssu-online": "tsx examples/storage-unit/online.ts",
     "game-item-to-chain": "tsx examples/storage-unit/game-item-to-chain.ts",
+    "chain-item-to-game": "tsx examples/storage-unit/chain-item-to-game.ts",
+    "withdraw-deposit": "tsx examples/storage-unit/withdraw-deposit.ts",
     "extract:errors": "tsx tools/error-decoder/error-extractor.ts",
     "compile:decoder": "tsc --project tools/error-decoder/tsconfig.json",
     "prepare:decoder": "cd tools/error-decoder && cp index.html styles.css dist/",
