feat: typescript examples to interact with gate and builder extension examples (#76)
**Summary of changes**
- Removed manual copy/paste of world object IDs from
`examples/utils/config.ts ` by adding a hydration flow that loads all
world object IDs from the published JSON output. (if there is no
published json you can also manually set the ids)
- Refactored duplicated example logic into shared helpers and split
concerns into separate scripts for easier reuse and maintenance.
- Generalized env/config initialization across examples (consistent
required envs, derived addresses where possible).
- Improved error handling and reduced noisy logging for clearer example
output.
- Added TypeScript examples for gate interactions and builder extension
workflows.
- fixed examples after the recent contract changes

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ prd.md
 contracts/world/sources/primitives/template.move
 contracts/world/.replay/
 contracts/verify/
+contracts/**/Published.toml
 
 # Error decoder build artifacts
 tools/error-decoder/*.js
