--- a/package.json
+++ b/package.json
@@ -5,31 +5,47 @@
   "scripts": {
     "build": "find contracts -maxdepth 1 -mindepth 1 -type d | xargs -P 4 -I {} sui move build --path {}",
     "test": "find contracts -maxdepth 1 -mindepth 1 -type d | xargs -P 4 -I {} sui move test --path {}",
-    "deploy": "./scripts/deploy.sh",
-    "deploy:dry-run": "chmod +x ./scripts/deploy.sh && ./scripts/deploy.sh --dry-run",
     "fmt": "prettier --plugin=@mysten/prettier-plugin-move --write \"**/**/*.move\"",
-    "fmt:check": "prettier --plugin=@mysten/prettier-plugin-move --check \"**/**/*.move\" \"examples/**/*.ts\" \"tools/**/*.ts\"",
-    "fmt:ts": "prettier --write \"examples/**/*.ts\" \"tools/**/*.ts\"",
-    "fmt:ts:check": "prettier --check \"examples/**/*.ts\" \"tools/**/*.ts\"",
-    "sig-verify": "tsx examples/crypto/sig-verify.ts",
-    "generate-test-sig": "tsx examples/location/generate-test-signature.ts",
-    "setup-access": "tsx examples/access/setup-access.ts",
-    "configure-fuel-energy": "tsx examples/network-node/configure-fuel-energy.ts",
-    "create-character": "tsx examples/character/create-character.ts",
-    "create-nwn": "tsx examples/network-node/create-nwn.ts",
-    "deposit-fuel": "tsx examples/network-node/deposit-fuel.ts",
-    "online-nwn": "tsx examples/network-node/online-nwn.ts",
-    "update-fuel": "tsx examples/network-node/update-fuel.ts",
-    "offline-nwn": "tsx examples/network-node/offline-nwn.ts",
-    "unanchor-nwn": "tsx examples/network-node/unanchor-nwn.ts",
-    "get-fuel-quantity": "tsx examples/network-node/helper.ts",
-    "create-assembly": "tsx examples/assembly/create-assembly.ts",
-    "online": "tsx examples/assembly/online.ts",
-    "create-storage-unit": "tsx examples/storage-unit/create-storage-unit.ts",
-    "ssu-online": "tsx examples/storage-unit/online.ts",
-    "game-item-to-chain": "tsx examples/storage-unit/game-item-to-chain.ts",
-    "chain-item-to-game": "tsx examples/storage-unit/chain-item-to-game.ts",
-    "withdraw-deposit": "tsx examples/storage-unit/withdraw-deposit.ts",
+    "fmt:check": "prettier --plugin=@mysten/prettier-plugin-move --check \"**/**/*.move\" \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
+    "fmt:ts": "prettier --write \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
+    "fmt:ts:check": "prettier --check \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
+    "deploy:dry-run": "chmod +x ./scripts/deploy.sh && ./scripts/deploy.sh --dry-run",
+    "deploy": "./scripts/deploy.sh",
+    "clean": "rm -f contracts/world/Published.toml contracts/extension_examples/Published.toml deployments/testnet/*.json",
+    "deploy-world": "mkdir -p deployments/testnet && cd contracts/world && sui client publish --json 2>&1 | tsx ../../ts-scripts/utils/extract-json.ts > ../../deployments/testnet/world_package.json && cd ../.. && tsx ts-scripts/utils/extract-object-ids.ts",
+    "deploy-builder-ext": "mkdir -p deployments/testnet && cd contracts/extension_examples && sui client publish --json 2>&1 | tsx ../../ts-scripts/utils/extract-json.ts > ../../deployments/testnet/builder_package.json && cd ../.. && tsx ts-scripts/utils/extract-object-ids.ts",
+    "extract-object-ids": "tsx ts-scripts/utils/extract-object-ids.ts",
+    "sig-verify": "tsx ts-scripts/crypto/sig-verify.ts",
+    "generate-test-sig": "tsx ts-scripts/location/generate-test-signature.ts",
+    "setup-access": "tsx ts-scripts/access/setup-access.ts",
+    "configure-fuel-energy": "tsx ts-scripts/network-node/configure-fuel-energy.ts",
+    "create-character": "tsx ts-scripts/character/create-character.ts",
+    "create-nwn": "tsx ts-scripts/network-node/create-nwn.ts",
+    "deposit-fuel": "tsx ts-scripts/network-node/deposit-fuel.ts",
+    "online-nwn": "tsx ts-scripts/network-node/online-nwn.ts",
+    "update-fuel": "tsx ts-scripts/network-node/update-fuel.ts",
+    "offline-nwn": "tsx ts-scripts/network-node/offline-nwn.ts",
+    "unanchor-nwn": "tsx ts-scripts/network-node/unanchor-nwn.ts",
+    "get-fuel-quantity": "tsx ts-scripts/network-node/helper.ts",
+    "create-assembly": "tsx ts-scripts/assembly/create-assembly.ts",
+    "online": "tsx ts-scripts/assembly/online.ts",
+    "create-storage-unit": "tsx ts-scripts/storage-unit/create-storage-unit.ts",
+    "ssu-online": "tsx ts-scripts/storage-unit/online.ts",
+    "game-item-to-chain": "tsx ts-scripts/storage-unit/game-item-to-chain.ts",
+    "chain-item-to-game": "tsx ts-scripts/storage-unit/chain-item-to-game.ts",
+    "withdraw-deposit": "tsx ts-scripts/storage-unit/withdraw-deposit.ts",
+    "deposit-to-ephemeral-inventory": "tsx ts-scripts/storage-unit/deposit-to-ephemeral-inventory.ts",
+    "configure-gate-distance": "tsx ts-scripts/gate/configure-distance.ts",
+    "create-gates": "tsx ts-scripts/gate/create-gates.ts",
+    "online-gates": "tsx ts-scripts/gate/online.ts",
+    "link-gates": "tsx ts-scripts/gate/link-gates.ts",
+    "jump": "tsx ts-scripts/gate/jump.ts",
+    "configure-builder-extension-rules": "tsx ts-scripts/builder_extension/configure-rules.ts",
+    "authorise-gate": "tsx ts-scripts/builder_extension/authorise-gate.ts",
+    "authorise-storage-unit": "tsx ts-scripts/builder_extension/authorise-storage-unit.ts",
+    "issue-tribe-jump-permit": "tsx ts-scripts/builder_extension/issue-tribe-jump-permit.ts",
+    "collect-corpse-bounty": "tsx ts-scripts/builder_extension/collect-corpse-bounty.ts",
+    "jump-with-permit": "tsx ts-scripts/builder_extension/jump-with-permit.ts",
     "extract:errors": "tsx tools/error-decoder/error-extractor.ts",
     "compile:decoder": "tsc --project tools/error-decoder/tsconfig.json",
     "prepare:decoder": "cd tools/error-decoder && cp index.html styles.css dist/",
