refactor : improve world deployment process (#88)
## Summary

**Deployment**
- Add `docker/entrypoint.sh` that automates the full deploy pipeline:
load env, init Sui client config, import private keys into keystore,
publish contracts, extract object IDs, and configure the world
- Pin Docker image to `mysten/sui-tools:testnet-v1.64.0` for
reproducible builds
- Add `PRIVATE_KEY` to env config as the deployer key used for
publishing
- Update Dockerfile to use entrypoint, set `CI=true` for non-interactive
pnpm
- added additional logging

**Improve typescript flow**
- externalised test constants so that the test resources can be shared 
- generate dynamic proof generation instead hard coded version

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM mysten/sui-tools:testnet AS dependency-stage
+FROM mysten/sui-tools:testnet-v1.64.0 AS dependency-stage
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -44,12 +44,12 @@ RUN find contracts -maxdepth 1 -mindepth 1 -type d | \
     xargs -P 4 -I {} sui move test --path {}
 
 FROM dependency-stage AS release-stage
-# Copy built artifacts from build stage
+ENV CI=true
+
+# Copy pre-built contracts from build stage
 COPY --from=build-stage /app/contracts ./contracts
-COPY --from=build-stage /app/scripts ./scripts
 
-# Make deploy script executable
-RUN chmod +x ./scripts/deploy.sh
+# Make scripts executable
+RUN chmod +x ./scripts/*.sh ./docker/entrypoint.sh
 
-# Default command
-CMD ["bash", "-c", "echo 'Sui World Contracts Deployer' && echo 'Run: ./scripts/deploy.sh --env=<testnet|devnet|localnet>' && bash"]
+ENTRYPOINT ["./docker/entrypoint.sh"]
