--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "fmt:check": "prettier --plugin=@mysten/prettier-plugin-move --check \"**/**/*.move\" \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
     "fmt:ts": "prettier --write \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
     "fmt:ts:check": "prettier --check \"ts-scripts/**/*.ts\" \"tools/**/*.ts\"",
-    "deploy:dry-run": "chmod +x ./scripts/deploy.sh && ./scripts/deploy.sh --dry-run",
-    "deploy": "./scripts/deploy.sh",
-    "clean": "rm -f contracts/world/Published.toml contracts/extension_examples/Published.toml deployments/testnet/*.json",
-    "deploy-world": "mkdir -p deployments/testnet && cd contracts/world && sui client publish --json 2>&1 | tsx ../../ts-scripts/utils/extract-json.ts > ../../deployments/testnet/world_package.json && cd ../.. && tsx ts-scripts/utils/extract-object-ids.ts",
-    "deploy-builder-ext": "mkdir -p deployments/testnet && cd contracts/extension_examples && sui client publish --json 2>&1 | tsx ../../ts-scripts/utils/extract-json.ts > ../../deployments/testnet/builder_package.json && cd ../.. && tsx ts-scripts/utils/extract-object-ids.ts",
+    "clean": "rm -rf contracts/world/Published.toml contracts/extension_examples/Published.toml deployments/*",
+    "deploy-world": "chmod +x ./scripts/deploy-world.sh && ./scripts/deploy-world.sh",
+    "configure-world": "chmod +x ./scripts/configure-world.sh && ./scripts/configure-world.sh",
+    "create-test-resources": "chmod +x ./scripts/seed-world.sh && ./scripts/seed-world.sh",
+    "deploy-builder-ext": "chmod +x ./scripts/deploy-builder-ext.sh && ./scripts/deploy-builder-ext.sh",
     "extract-object-ids": "tsx ts-scripts/utils/extract-object-ids.ts",
     "sig-verify": "tsx ts-scripts/crypto/sig-verify.ts",
     "generate-test-sig": "tsx ts-scripts/location/generate-test-signature.ts",
     "setup-access": "tsx ts-scripts/access/setup-access.ts",
     "configure-fuel-energy": "tsx ts-scripts/network-node/configure-fuel-energy.ts",
+    "configure-gate-distance": "tsx ts-scripts/gate/configure-distance.ts",
     "create-character": "tsx ts-scripts/character/create-character.ts",
     "create-nwn": "tsx ts-scripts/network-node/create-nwn.ts",
     "deposit-fuel": "tsx ts-scripts/network-node/deposit-fuel.ts",
@@ -35,7 +36,6 @@
     "chain-item-to-game": "tsx ts-scripts/storage-unit/chain-item-to-game.ts",
     "withdraw-deposit": "tsx ts-scripts/storage-unit/withdraw-deposit.ts",
     "deposit-to-ephemeral-inventory": "tsx ts-scripts/storage-unit/deposit-to-ephemeral-inventory.ts",
-    "configure-gate-distance": "tsx ts-scripts/gate/configure-distance.ts",
     "create-gates": "tsx ts-scripts/gate/create-gates.ts",
     "online-gates": "tsx ts-scripts/gate/online.ts",
     "link-gates": "tsx ts-scripts/gate/link-gates.ts",
