!refactor: admin-cap-to-admin-acl (#89)
## Motivation
The owned `AdminCap` object causes lock contention when multiple
sponsored transactions (anchor + share) fire concurrently, only the
first to lock succeeds, the rest fail with "Object is already locked."
Switching to the
shared `AdminACL` eliminates this because shared objects go through
consensus and support concurrent access.

## Summary
- Replace all `&AdminCap` parameters with `&AdminACL` and add
`verify_sponsor(ctx)`
- Remove `AdminCap` from access_control.move
- Update all Move tests, TS scripts, deploy.sh, and docs to match

## How it works
- `verify_sponsor()` checks the transaction sponsor (or falls back to
sender) against the `AdminACL.authorized_sponsors`. If the address is
authorized, the operation proceeds.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "debug:prepare": "chmod +x ./scripts/prepare-debug.sh && ./scripts/prepare-debug.sh"
   },
   "dependencies": {
+    "@mysten/bcs": "^2.0.2",
     "@mysten/prettier-plugin-move": "^0.3.3",
     "@mysten/sui": "^1.45.2",
     "@noble/hashes": "^1.8.0",
