fix: enable event emission in sponsored txns (#94)
## Fix: Enable Event Emission in Sponsored Transactions

### Summary

This PR fixes an issue where blockchain events (such as `JumpEvent`)
were not being captured in transaction results. The root cause was that
the `executeSponsoredTransaction` utility function was not requesting
events from the Sui client.

### Problem

The jump.ts script includes code to extract and log `JumpEvent` from the
transaction result:

```typescript
const jumpEvent = extractEvent<{...}>(result, "::gate::JumpEvent");
if (jumpEvent) {
    console.log("JumpEvent:", jumpEvent);
}
```

However, this code never logged anything because the transaction result
didn't include events in the response.

### Root Cause

The `executeSponsoredTransaction` function in transaction.ts was only
requesting `showObjectChanges` and `showEffects` from the Sui client,
but not `showEvents`. Without explicitly requesting events, the client
doesn't include them in the response.

### Changes

#### `transaction.ts`

- Added `showEvents: true` to the default transaction execution options
- This ensures all emitted events (like `JumpEvent`, created in
`gate.move::jump_internal()`) are included in the transaction result

#### `jump.ts`

- Captured the return value from the `jump()` function
- Added logging for the complete transaction result for better debugging
visibility

#### `.gitignore`

- Added `.pnpm-store` directory to gitignore
- Prevents pnpm store artifacts from being tracked when pnpm install is
executed within containers

### Testing

After this change, events emitted from Move contracts (such as
`JumpEvent` with gate IDs, character IDs, and keys) will be properly
captured and logged in the TypeScript scripts.

#### Example Output

```sh
root@bbe563096677:/workspace/world-contracts# pnpm tsx ts-scripts/gate/jump.ts
JumpEvent: {
  character_id: '0x1763bda23b77e69553af3b515616895372848aa82d4568d0f9780e8f93014ce6',
  character_key: { item_id: '811880', tenant: 

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ tools/error-decoder/*.js.map
 tools/error-decoder/dist/
 dist/
 .replay/
+
+# pnpm-store when pnpm install executed in containers
+.pnpm-store
+
